* enumerator.c (lazy_flat_map_func): convert the block value to   Array if it doesn't respond to each.  [ruby-core:43334]   [Bug #6155]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35092 b2dd03c8-39d4-4d8f-98ff-823fe69b080e